# Autotools

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
include/: Makefile.am  mymathclass.cpp  mymathclass.h
src/: Makefile.am  main.cpp
